aria tweaks, audio api, perf tweaks

--- a/client/html/index.html
+++ b/client/html/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="initial-scale=1.0, width=device-width">
 <title>Avalon Web Client</title>
 </head>
-<body aria-role="application">
+<body>
 <div id="page"></div>
 <!-- inject:js -->
 <!-- endinject -->
